--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <div class="">
       <h1>Roy Gicheru</h1>
     </div>
-
-    <h2>About me...</h2>
-    <p>First off here's a little something to represent who I am...</p>
-    <img class="art" src="image/art.jpg" alt="A piece of wisdom">
+<div class="pro">
     <h3>Projects</h3>
     <ul>
       <li>dgfddggg</li>
       <li></li>
       <li></li>
-
     </ul>
+    </div>
+        <div class="image">
+          <h2>Deeper meaning...</h2>
+          <p>First off here's a little something to represent who I am...</p>
+        <img class="art" src="image/art.jpg" alt="A piece of wisdom">
+        </div>
   </body>
 </html>
