--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
           <p>First off here's a little something to represent who I am...</p>
         <img class="art" src="image/art.jpg" alt="A piece of wisdom">
         </div>
+        <h3>About me...</h3>
   </body>
 </html>
