--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
       <h1>Roy Gicheru</h1>
     </div>
 <div class="pro">
-    <h3>Projects</h3>
+    <h3> My projects</h3>
     <ul>
-      <li>dgfddggg</li>
-      <li></li>
-      <li></li>
+      <li><a href="https://github.com/Roygicheru/my-first-website">my first website</a></li>
+      <li><a href="https://github.com/Roygicheru/my-first-webpage">my first webpage</a></li>
+      <li><a href="https://github.com/Roygicheru/pets">pets</a></li>
+      <li><a href="https://github.com/Roygicheru/mango">mango</a></li>
     </ul>
     </div>
         <div class="image">
