--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           <p>First off here's a little something to represent who I am...</p>
         <img class="art" src="image/art.jpg" alt="A piece of wisdom">
         </div>
-        <h3>About me...</h3>
+        <div class="me">
+        <h4>About me...</h4>
+        </div>
   </body>
 </html>
