--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div>
         <div class="me">
         <h4>About me...</h4>
-        <p>I went through my secondary education in Pioneer school where I did my national examination and was able to get a B-</p>
-        <p>Moringa is actually my first school after completing high school and I'm glad that i got a chance to sharpen my much needed programming skills and I truly appreciate it</p>
-        <p>My key interests are swimming, soccer, badminton and generally things that help me stay active</p>
+        <p>I went through my secondary education in Pioneer school where I did my national examination and was able to get a B-.</p>
+        <p>Moringa is actually my first school after completing high school and I'm glad that i got a chance to sharpen my much needed programming skills and I truly appreciate it.</p>
+        <p>My key interests are swimming, soccer, badminton and generally things that help me stay active.</p>
         </div>
   </body>
 </html>
